--- a/crates/rust-hex/Cargo.toml
+++ b/crates/rust-hex/Cargo.toml
@@ -18,13 +18,15 @@ travis-ci = { repository = "KokaKiwi/rust-hex", branch = "master" }
 default = ["std", "mesalock_sgx"]
 std = ["mesalock_sgx"]
 mesalock_sgx = ["std", "sgx_tstd"]
+enclave_unit_test = ["sgx_tunittest"]
 
 [[bench]]
 name = "hex"
 harness = false
 
 [dependencies]
-sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.0", optional = true }
+sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.0", optional = true }
+sgx_tunittest = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.0", optional = true }
 
 [package.metadata.docs.rs]
 all-features = true
