--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -19,4 +19,11 @@ cfg-if = { git = "https://github.com/universal-secure-computing-community/crates
 hex = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.0+sgx1.1.1" }
 itoa = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.0+sgx1.1.1" }
 
+# unreleased crates
+serde = { path = "../crates/serde/serde", features = ["derive"] }
+adler32 = { path = "../crates/adler32-rs" }
+fnv = { path = "../crates/rust-fnv" }
+thiserror = { path = "../crates/thiserror" }
+anyhow = { path = "../crates/anyhow" }
+
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
