--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -24,4 +24,7 @@ itoa = { git = "https://github.com/universal-secure-computing-community/crates-s
 serde = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1", features = ["derive"] }
 thiserror = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
 
+# Unreleased
+either = { path = "../crates/either", features = ["serde"] }
+
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
