--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -26,5 +26,6 @@ thiserror = { git = "https://github.com/universal-secure-computing-community/cra
 
 # Unreleased
 either = { path = "../crates/either", features = ["serde"] }
+smallvec = { path = "../crates/rust-smallvec", features = ["write", "union", "specialization", "may_dangle", "serde"] }
 
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
