Add no-panic 0.1.12

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -27,5 +27,6 @@ thiserror = { git = "https://github.com/universal-secure-computing-community/cra
 # Unreleased
 either = { path = "../crates/either", features = ["serde"] }
 smallvec = { path = "../crates/rust-smallvec", features = ["write", "union", "specialization", "may_dangle", "serde"] }
+no-panic = { path = "../crates/no-panic" }
 
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
