--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -29,5 +29,6 @@ either = { path = "../crates/either", features = ["serde"] }
 smallvec = { path = "../crates/rust-smallvec", features = ["write", "union", "specialization", "may_dangle", "serde"] }
 no-panic = { path = "../crates/no-panic" }
 lazy_static = { path = "../crates/lazy-static.rs" }
+spin = { path = "../crates/spin-rs" }
 
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
