--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crates-sgx-example"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["The Universal Secure Computing Community Authors"]
 edition = "2018"
 
@@ -15,20 +15,18 @@ mesalock_sgx = [
 ]
 
 [dependencies]
-adler32 = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
-anyhow = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
-cfg-if = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
-fnv = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
-hex = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
-itoa = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
-serde = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1", features = ["derive"] }
-thiserror = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.1+sgx1.1.1" }
-
-# Unreleased
-either = { path = "../crates/either", features = ["serde"] }
-smallvec = { path = "../crates/rust-smallvec", features = ["write", "union", "specialization", "may_dangle", "serde"] }
-no-panic = { path = "../crates/no-panic" }
-lazy_static = { path = "../crates/lazy-static.rs" }
-spin = { path = "../crates/spin-rs" }
+adler32 = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+anyhow = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+cfg-if = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+either = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1", features = ["serde"] }
+fnv = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+hex = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+itoa = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+lazy_static = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+no-panic = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+serde = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1", features = ["derive"] }
+smallvec = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1", features = ["write", "union", "specialization", "may_dangle", "serde"] }
+spin = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
+thiserror = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
 
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
