--- a/crates/lazy-static.rs/Cargo.toml
+++ b/crates/lazy-static.rs/Cargo.toml
@@ -18,7 +18,8 @@ exclude = ["/.travis.yml", "/appveyor.yml"]
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
 
 [dependencies.spin]
-version = "0.5.0"
+git = "https://github.com/universal-secure-computing-community/crates-sgx.git"
+tag = "v0.2.2+sgx1.1.1"
 optional = true
 
 [features]
