--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -29,4 +29,7 @@ smallvec = { git = "https://github.com/universal-secure-computing-community/crat
 spin = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
 thiserror = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.2+sgx1.1.1" }
 
+# Unreleased
+ryu = { path = "../crates/ryu", features = ["small", "no-panic"] }
+
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
