--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -31,5 +31,6 @@ thiserror = { git = "https://github.com/universal-secure-computing-community/cra
 
 # Unreleased
 ryu = { path = "../crates/ryu", features = ["small", "no-panic"] }
+sval = { path = "../crates/sval", features = ["std", "test", "serde", "derive", "arbitrary-depth"] }
 
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
