--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -31,4 +31,7 @@ spin = { git = "https://github.com/universal-secure-computing-community/crates-s
 sval = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.3+sgx1.1.1", features = ["std", "test", "serde", "derive", "arbitrary-depth"] }
 thiserror = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.2.3+sgx1.1.1" }
 
+# Unreleased
+itertools = { path = "../crates/itertools" }
+
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
