--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -33,5 +33,6 @@ thiserror = { git = "https://github.com/universal-secure-computing-community/cra
 
 # Unreleased
 itertools = { path = "../crates/itertools" }
+log = { path = "../crates/log" }
 
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
