--- a/crates/md5/Cargo.toml
+++ b/crates/md5/Cargo.toml
@@ -20,8 +20,14 @@ repository = "https://github.com/stainless-steel/md5"
 readme = "README.md"
 categories = ["algorithms", "cryptography"]
 keywords = ["checksum", "digest", "hash", "md5"]
-editionn = "2018"
+edition = "2018"
 
 [features]
 default = ["std"]
-std = []
+std = ["mesalock_sgx"]
+mesalock_sgx = ["sgx_tstd"]
+enclave_unit_test = ["sgx_tunittest"]
+
+[dependencies]
+sgx_tstd        = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
+sgx_tunittest   = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
