port to teaclave-sgx-sdk

--- a/crates/want/Cargo.toml
+++ b/crates/want/Cargo.toml
@@ -10,8 +10,19 @@ documentation = "https://docs.rs/want"
 edition = "2018"
 
 [dependencies]
-log = "0.4"
-try-lock = "0.2"
+log = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.0+sgx1.1.2" }
+try-lock = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.1+sgx1.1.2" }
+
+#log = "0.4"
+#try-lock = "0.2"
+sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
+sgx_tunittest = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
+
+
+[features]
+default = ["mesalock_sgx"]
+mesalock_sgx = ["sgx_tstd"]
+enclave_unit_test = ["sgx_tunittest"]
 
 [dev-dependencies]
 tokio-executor = "0.2.0-alpha.2"
