--- a/crates/HdrHistogram_rust/Cargo.toml
+++ b/crates/HdrHistogram_rust/Cargo.toml
@@ -26,20 +26,31 @@ maintenance = { status = "passively-maintained" }
 
 [features]
 bench_private = [] # for enabling nightly-only feature(test) on the main crate to allow benchmarking private code
-serialization = [ "flate2", "nom", "base64" ]
+serialization = [ "libflate", "nom", "base64" ]
 sync = [ "crossbeam-channel" ]
-default = [ "serialization", "sync" ]
-
+default = [ "serialization", "sync", "mesalock_sgx" ]
+mesalock_sgx = ["sgx_tstd"]
+enclave_unit_test = ["crates_unittest", "inventory", "rand"]
 [dependencies]
-num-traits = "0.2"
-byteorder = "1.0.0"
-flate2 = { version = "1.0", optional = true }
-nom = { version = "5.0", optional = true }
-base64 = { version = "0.11", optional = true }
-crossbeam-channel = { version = "0.4", optional = true }
-
+#num-traits = "0.2"
+#byteorder = "1.0.0"
+#flate2 = { version = "1.0", optional = true }
+#nom = { version = "5.0", optional = true }
+#base64 = { version = "0.11", optional = true }
+#crossbeam-channel = { version = "0.4", optional = true }
+rand = { path = "../rand-0.7.3", version = "0.7", optional = true, features = ["small_rng"] }
+num-traits = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.1+sgx1.1.2" }
+byteorder = { path = "../byteorder" }
+#flate2 = { version = "1.0", optional = true }
+libflate = { path = "../libflate", optional = true }
+nom = { path = "../nom", optional = true }
+base64 = { path = "../rust-base64", optional = true }
+crossbeam-channel = { path = "../crossbeam/crossbeam-channel", optional = true }
+sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true, features = ["untrusted_time"] }
+crates_unittest = { git = "https://github.com/Zha0Chan/crates-sgx-unittest.git", optional = true, default-features =  false}
+inventory = { version = "0.1.6", optional = true }
 [dev-dependencies]
-rand = { version = "0.7", features = ["small_rng"] }
+#rand = { version = "0.7", features = ["small_rng"] }
 rug = "1.2"
 ieee754 = "0.2.2"
 clap = "2.26.2"
