--- a/crates/aho-corasick/Cargo.toml
+++ b/crates/aho-corasick/Cargo.toml
@@ -14,25 +14,27 @@ exclude = [
   "/aho-corasick-debug", "/ci/*", "/.travis.yml", "/appveyor.yml",
 ]
 
-[workspace]
-members = ["bench"]
+#[workspace]
+#members = ["bench"]
 # We'd ideally not do this, but since the debug tool uses Rust 2018, older
 # versions of Rust (such as 1.28) fail to parse the manifest because it treats
 # `edition = "2018"` as an unstable feature.
 #
 # When we move our MSRV to Rust 2018, then we should be able to add this back
 # to the workspace.
-exclude = ["aho-corasick-debug"]
+#exclude = ["aho-corasick-debug"]
 
 [lib]
 name = "aho_corasick"
 
 [features]
-default = ["std"]
+default = ["std", "mesalock_sgx"]
 std = ["memchr/use_std"]
+mesalock_sgx = ["sgx_tstd", "memchr/mesalock_sgx"]
 
 [dependencies]
-memchr = { version = "2.2.0", default-features = false }
+memchr = { path = "../rust-memchr" }
+sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
 
 [dev-dependencies]
 # TODO: Re-enable this once the MSRV is 1.43 or greater.
