--- a/crates/bincode/Cargo.toml
+++ b/crates/bincode/Cargo.toml
@@ -16,9 +16,11 @@ license = "MIT"
 description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"
 
 [dependencies]
-byteorder = "1.3.0"
-serde = "1.0.63"
-
+byteorder = { path = "../byteorder" }
+serde = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.1+sgx1.1.2", features = ["derive"] }
+#byteorder = "1.3.0"
+#serde = "1.0.63"
+sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
 [dev-dependencies]
 serde_bytes = "0.11"
 serde_derive = "1.0.27"
@@ -29,6 +31,8 @@ serde_derive = "1.0.27"
 # and targets that support it. The feature will be removed if and when a new
 # major version is released.
 i128 = []
+default = ["mesalock_sgx"]
+mesalock_sgx = ["sgx_tstd"]
 
 [badges]
 travis-ci = { repository = "servo/bincode" }
