--- a/crates/tonic/Cargo.toml
+++ b/crates/tonic/Cargo.toml
@@ -4,7 +4,6 @@ members = [
     "tonic-build",
     "tonic-health",
     "tonic-types",
-
     # Non-published crates
     # "examples",
     # "interop",
@@ -16,5 +15,7 @@ members = [
     # "tests/extern_path/uuid",
     # "tests/ambiguous_methods",
     # "tests/extern_path/my_application",
-    # "tests/integration_tests"
+    # "tests/integration_tests
 ]
+
+exclude = ["sgx-tests"]
