--- a/crates/erased-serde/Cargo.toml
+++ b/crates/erased-serde/Cargo.toml
@@ -12,8 +12,9 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-serde = { version = "1.0.63", default-features = false }
-
+#serde = { version = "1.0.63", default-features = false }
+serde = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.1+sgx1.1.2", features = ["derive"] }
+sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
 [dev-dependencies]
 serde_cbor = "0.11"
 serde_derive = "1.0"
@@ -21,10 +22,11 @@ serde_json = "1.0"
 
 [features]
 # Note: at least one of "std" or "alloc" must be enabled.
-default = ["std"]
-std = ["serde/std"]
+default = ["std", "mesalock_sgx"]
+std = ["serde/std", "mesalock_sgx"]
 alloc = ["serde/alloc"] # requires Rust 1.36+
 unstable-debug = []
+mesalock_sgx = ["sgx_tstd", "std"]
 
 [[test]]
 name = "test"
