--- a/crates/take_mut/Cargo.toml
+++ b/crates/take_mut/Cargo.toml
@@ -11,7 +11,9 @@ categories = ["rust-patterns"]
 [features]
 default = ["mesalock_sgx"]
 mesalock_sgx = ["sgx_tstd", "sgx_trts"]
-
+enclave_unit_test = ["crates_unittest", "inventory"]
 [dependencies]
+crates_unittest = { git = "https://github.com/Zha0Chan/crates-sgx-unittest.git", optional = true, default-features = false }
+inventory = { version = "0.1.6", optional = true }
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
 sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
